# doublons

./: .gitignore  README.md  build.sh  doublons.py  pyproject.toml  shorten_regex.py  test-cases.md  test-cases.txt
doublons/: blacklist  doublons.py  filter.py  shorten_regex.py
tests/: test_playground.py
