[tool.poetry]
name = "doublons"
version = "1.0.1"
description = "Find duplicate files in your file system (same content)."
authors = ["Jonathan Cabezas <jonathan.cabezas.lyon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mio = {git = "git@github.com:JonathanCabezas/mio.git"}


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  ".",
  "doublons",
]

[tool.poetry.group.build.dependencies]
nuitka = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
